mobile view nav bar alignment issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -126,11 +126,11 @@ img {
 
 @media (max-width: 768px) {
     #navbar {
-        width: 100vh;
+        width: 100%;
         height: 40vh;
         z-index: 50;
         font-size: 130%;
-        align-items: flex-start;
+        align-items: center;
     }
 
     #navbar header,
